# libtech

./: .gitignore  .gitmodules  CMakeLists.txt  README
.github/workflows/: main.yml
include/libtech/: Geometry.h  LineSet.h  Paytable.h  ReelManager.h  ReelStrip.h  SlotWins.h  SymbolSet.h  arraylist.h  binreader.h  filecache.h  filelogger.h  fsutils.h  functions.h  geometry.h  imaging.h  libtech.h  linkedlist.h  mytime.h  numbertracks.h  oglutilities.h  pair.h  pathutils.h  pingserver.h  queue.h  randomgen.h  shaderloader.h  stdutils.h  stringtools.h  sysutils.h  tgafile.h  vec.h
include/libtech/games/blackjack/: blackjack.h
include/libtech/slots/: LineSet.h  Paytable.h  ReelManager.h  ReelStrip.h  SlotWins.h  SymbolSet.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt
src/console_tester/: main.cpp
src/framework/: libtech.h
src/framework/collections/: linkedlist.h
src/framework/fileformats/: tgafile.cpp
src/framework/fs/: filecache.cpp  fsutils.cpp  fsutils.h  pathutils.cpp
src/framework/games/blackjack/: blackjack.cpp
src/framework/imaging/: imaging.cpp
src/framework/io/: binreader.cpp
src/framework/loaders/: shaderloader.cpp
src/framework/logging/: filelogger.cpp
src/framework/math/: Geometry.cpp  functions.cpp  functions.h  geometry.cpp  geometry.h  numbertracks.cpp  numbertracks.h  randomgen.cpp  randomgen.h  vec.cpp
src/framework/mytime/: mytime.cpp  mytime.h
src/framework/network/: pingserver.cpp
src/framework/opengl/: oglutilities.cpp
src/framework/slots/: LineSet.cpp  Paytable.cpp  Paytable.h  ReelManager.cpp  ReelManager.h  ReelStrip.cpp  ReelStrip.h  SlotWins.cpp  SuperSlotsSupport.h  SymbolSet.cpp
src/framework/slots/content/: lines.xml  paytable.xml  reelstrips.xml  symbols.xml
src/framework/system/: sysutils.cpp
src/framework/text/: stringtools.cpp
tests/: imaging_tests.cpp  main.cpp  path_tests.cpp
